--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -5,7 +5,7 @@ header {
   border-bottom: 1px solid #CCCCCC;
 }
 .logo {
-  background-image: url(/images/logo.png);
+  background-image: url(images/logo.png);
   height: 60px;
   width: 140px;
   margin-left: 20px;
