--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -3,7 +3,8 @@ background-color: #FFFFFF;
 height: 70px;
 width: 100%;
 border: 1px #DDDDDD solid;
-border-radius: 100%;
+border-radius: 4px;
+position: relative;
 }
 section.filters button {
 font-size: 18px;
@@ -12,36 +13,38 @@ background-color: #FF5A5F;
 height: 48px;
 width: 20%;
 border: none;
-border-radius: 4px;
+border-radius: 1px;
 text-align: center;
 margin-top: 8px;
 margin-right: 30px;
 float: right;
+position: relative;
 }
 section.filters button:hover {
 opacity: 90%;
 }
 h3 {
   font-weight: 600;
-  margin: 3px;
+  position: relative;
+  margin-top: 8px;
 }
 h4 {
   font-weight: 400;
   font-size: 14px;
-  margin: 3px;
+  position: relative;
+  margin-bottom: 15px;
 }
 .locations {
   height: 100%;
   width: 25%;
   border-right: #DDDDDD 1px solid;
-  float: left;
-  margin-left:3px;
+  margin-left:10px;
   position: relative;
+  float: left;
 }
 .amenities {
   height: 100%;
   width: 25%;
-  margin-right: 10%;
-  float: right;
   position: relative;
+  float: right;
 }
